@@ -5,6 +5,8 @@
     Travis D. Warlick, Jr.
   * Image paths at HTTPS URLs are now turned into +<img>+ tags.  Pull
     Request #60 by James Mead
+  * Markup defined by RDoc::Markup#add_special inside a <tt><tt></tt> is no
+    longer converted.
 
 === 3.9.2 / 2011-08-11
 
